--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for( [@book, @review]) ddo |f| %>
-	<%= render 'shared/validation_errors', object: @revie %>
+<%= form_for( [@book, @review]) do |f| %>
+	<%= render 'shared/validation_errors', object: @review %>
 
 	<%= f.label :name %>
 	<%= f.text_field :name, autofocus: true, placeholder: 'Name' %>
