--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,5 @@
 <header>Reviews for <%= link_to(@book.title, @book) %></header>
-	<ol id="reivews">
+	<ol id="reviews">
 		<% @reviews.each do |review| %>
 			<li>
 				<span class="review"><%= pluralize(review.stars, 'star') %></span>
@@ -11,5 +11,9 @@
 			</li>
 		<% end %>
 	</ol>
-	<%= link_to 'Write a Review', new_book_review_path(@book) %>
+	<%= link_to 'Write a Review', new_book_review_path(@book), remote: true,
+	data: { 'update-target' => 'review_form_container'},
+	class: 'btn btn-primary' %>
+	<div id="review_form_container"></div>
+
 	
